# Soccer_Dash

./: app.py  hello.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
