[project]
name = "soccer-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "soccer-dash"
version = "0.1.0"
description = "Soccer Dashboard"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = ">=3.10.1"
openpyxl = ">=3.1.5"
pandas = ">=2.2.3"
plotly = ">=6.0.1"
seaborn = ">=0.13.2"
streamlit = ">=1.44.1"
pillow = "^11.2.1"
streamlit-aggrid = "^1.1.4.post1"
wordcloud = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"